--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "独立开发者",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "./node_modules/.bin/tsc-watch --onSuccess \"node dist/main.js\""
   },
   "keywords": [],
   "author": "小坏",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.4.10",
+    "prettier": "^2.3.2",
+    "tsc-watch": "^4.4.0"
   }
 }
