--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.10",
+    "dotenv": "^10.0.0",
     "prettier": "^2.3.2",
     "tsc-watch": "^4.4.0"
   }
